modify style for custom scrollbar and fix images errors

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -11,7 +11,7 @@
         .inner {
             position: relative;
             z-index: 8;
-            margin: 5px;
+            margin: 8px;
             background: #222;
             color: #fff;
         }
