--- a/src/styles/components/interests.scss
+++ b/src/styles/components/interests.scss
@@ -13,6 +13,7 @@
         align-items: center;
         p {
             font: 400 var(--font-size-h4) var(--font-secondary);
+            margin: 0;
         }
         height: 330px;
         img {
